--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -1,7 +1,8 @@
 <section id="work">
   <div id="work-container">
-    <div id="work-menu">
-      <div id="work-menu-center"></div>
+    <div id="work-menu-toggle" class="focus"></div>
+    
+    <div id="work-menu" class="opened">
       <div id="work-menu-petal-container">
         <div class="work-menu-petal">
           <div><%= render "icons/beard" %></div>
