--- a/app/views/pages/home/_work.html.erb
+++ b/app/views/pages/home/_work.html.erb
@@ -1,6 +1,10 @@
 <section id="work">
   <div id="work-container">
-    <div id="work-menu-toggle" class="focus"></div>
+    <div id="work-menu-toggle" class="focus">
+      <i></i>
+      <i></i>
+      <i></i>
+    </div>
     
     <div id="work-menu" class="opened">
       <div id="work-menu-petal-container">
