--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -1,3 +1,11 @@
 <section id="contact">
-  contact
+  <div id="contact-container">
+    <div id="burger-container">
+      <div class="burger">
+        <i></i>
+        <i></i>
+        <i></i>
+      </div>
+    </div>
+  </div>
 </section>
