--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -122,3 +122,113 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
     }
   }
 }
+
+.card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  padding: 15px;
+  opacity: 0;
+  
+  @include user-select(none);
+  @include cursor-grab;
+  @include transition(all, 1s, $normal-bezier, 0s);
+  @include border-radius(8px);
+  
+  &.left {
+    left: -150%;
+  }
+  
+  &.right {
+    left: 150%;
+  }
+  
+  &.focus {
+    left: 0;
+    opacity: 1;
+  }
+  
+  &.mousedown {
+    @include cursor-grabbing;
+  }
+  
+  .card-content {
+    position: relative;
+    width: 100%;
+    top: 50%;
+    text-align: center;
+    
+    @include transform(translateY(-50%));
+    
+    .card-head {
+      display: inline-block;
+      width: 100%;
+      font-size: 3.5em;
+      text-align: center;
+      padding-bottom: 15px;
+      border-bottom: 4px solid white;
+      
+      @include respond-to(phone) { font-size: 2.2em; }
+    }
+    
+    .card-body {
+      display: inline-block;
+      width: 100%;
+      max-width: 960px;
+      font-size: 2em;
+      text-align: justify;
+      padding-top: 15px;
+      
+      @include respond-to(phone) { font-size: 1.25em; }
+    }
+  }
+}
+
+@mixin contact-card($color) {
+  .contact-card {
+    .card-content {
+      .btn-contact {
+        display: inline-block;
+        width: 100%;
+        max-width: 400px;
+        height: 64px;
+        background: white;
+        margin-top: 15px;
+        color: $color;
+        
+        @include border-radius(8px);
+        
+        .contact-text-wrapper {
+          position: relative;
+          width: 100%;
+          top: 50%;
+          
+          @include transform(translateY(-50%));
+          
+          .contact-text {
+            display: inline-block;
+            // height: 64px;
+            width: 100%;
+            font-size: 2em;
+            text-align: center;
+          }
+        }
+        
+        &.hover {
+          background: transparent;
+          border: 4px solid white;
+          color: white;
+        }
+        
+        &.mousedown {
+          border: 4px solid white;
+          color: white;
+          background: rgba(0,0,0,0.1);
+          
+          @include transform(translateY(4px));
+        }
+      }
+    }
+  }
+}
