--- a/app/assets/stylesheets/pages/home/_work.scss
+++ b/app/assets/stylesheets/pages/home/_work.scss
@@ -14,6 +14,21 @@ section#work {
     width: 100%;
     @include transition(height, 1s, $normal-bezier, 0s);
     
+    div#work-cards {
+      position: absolute;
+      height: calc(100% - 30px);
+      width: calc(100% - 30px);
+      top: 15px;
+      left: 15px;
+      color: white;
+      
+      .card {
+        background: darken(map-get($mex, red), 15%);
+      }
+      
+      @include contact-card(darken(map-get($mex, red), 15%));
+    }
+    
     div#work-menu-toggle {
       position: absolute;
       background: white;
@@ -102,136 +117,6 @@ section#work {
             
             svg {
               stroke: darken(map-get($mex, red), 10%);
-            }
-          }
-        }
-      }
-    }
-    
-    div#work-cards {
-      position: absolute;
-      height: calc(100% - 30px);
-      width: calc(100% - 30px);
-      top: 15px;
-      left: 15px;
-      color: white;
-      
-      div.work-card {
-        @include display-flex;
-        @include align-items(center);
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: -110%;
-        top: 0;
-        padding: 10px;
-        background: darken(map-get($mex, red), 15%);
-        opacity: 0;
-        
-        @include user-select(none);
-        @include cursor-grab;
-        @include transition(all, 1s, $normal-bezier, 0s);
-        @include border-radius(8px);
-        
-        &.focus {
-          left: 0;
-          opacity: 1;
-        }
-        
-        // &.away {
-        //   left: 110%;
-        // }
-        
-        &.mousedown {
-          @include cursor-grabbing;
-        }
-        
-        div {
-          display: block;
-          width: 100%;
-        
-          div.work-card-head {
-            display: block;
-            @include display-flex;
-            @include align-items(center);
-            position: relative;
-            height: 15%;
-            width: 100%;
-            font-size: 3.75em;
-            // border-bottom: 4px solid white;
-            padding-bottom: 8px;
-            
-            @include respond-to(phone) { font-size: 2em; }
-            
-            span {
-              display: block;
-              width: 100%;
-              text-align: center;
-              position: relative;
-            }
-          }
-          
-          div.work-card-body {
-            display: block;
-            @include display-flex;
-            @include align-items(flex-start);
-            position: relative;
-            height: 85%;
-            width: 100%;
-            padding: 10px;
-            font-size: 2em;
-            
-            @include respond-to(phone) { font-size: 1em; }
-            
-            span {
-              display: block;
-              width: 100%;
-              text-align: center;
-              position: relative;
-            }
-          }
-        }
-      }
-      
-      div#work-card-contact {
-        div {
-          div.work-card-body {
-            justify-content: center;
-            
-            a#work-contact {
-              @include display-flex;
-              @include align-items(center);
-              position: relative;
-              height: 64px;
-              width: 40%;
-              text-decoration: none;
-              font-size: 1em;
-              text-align: center;
-              color: darken(map-get($mex, red), 10%);
-              background: white;
-                
-              @include respond-to(phone) {
-                width: calc(100% - 60px);
-                height: 48px;
-                font-size: 1.5em;
-              }
-              
-              @include border-radius(8px);
-                
-              span {
-                display: block;
-                width: 100%;
-                text-align: center;
-                position: relative;
-              }
-              
-              &.hover {
-                border: 4px solid darken(map-get($mex, red), 10%);
-              }
-              
-              &.mousedown {
-                @include transform(translateY(4px));
-              }
             }
           }
         }
