--- a/app/views/pages/home/_contact.html.erb
+++ b/app/views/pages/home/_contact.html.erb
@@ -1,5 +1,5 @@
-<section id="contact">
-  <div id="contact-container">
+<section id="contact" class="section">
+  <div id="contact-container" class="section-container">
     <div id="burger-container">
       <div class="burger">
         <i></i>
