--- a/app/assets/stylesheets/_/_custom.scss
+++ b/app/assets/stylesheets/_/_custom.scss
@@ -123,71 +123,86 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
   }
 }
 
-.card {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  padding: 15px;
-  opacity: 0;
+.section {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  color: white;
   
-  @include user-select(none);
-  @include cursor-grab;
   @include transition(all, 1s, $normal-bezier, 0s);
-  @include border-radius(8px);
-  
-  &.left {
-    left: -150%;
-  }
-  
-  &.right {
-    left: 150%;
-  }
-  
-  &.focus {
-    left: 0;
-    opacity: 1;
-  }
-  
-  &.mousedown {
-    @include cursor-grabbing;
-  }
-  
-  .card-content {
-    position: relative;
-    width: 100%;
-    top: 50%;
-    text-align: center;
-    
-    @include transform(translateY(-50%));
-    
-    .card-head {
-      display: inline-block;
-      width: 100%;
-      font-size: 3.5em;
-      text-align: center;
-      padding-bottom: 15px;
-      border-bottom: 4px solid white;
-      
-      @include respond-to(phone) { font-size: 2.2em; }
-    }
-    
-    .card-body {
-      display: inline-block;
-      width: 100%;
-      max-width: 960px;
-      font-size: 2em;
-      text-align: justify;
-      padding-top: 15px;
-      
-      @include respond-to(phone) { font-size: 1.25em; }
-    }
-  }
 }
 
-@mixin contact-card($color) {
-  .contact-card {
+.section-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  
+  @include transition(height, 1s, $normal-bezier, 0s);
+}
+
+@mixin card($color) {
+  .card {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    padding: 15px;
+    opacity: 0;
+    background: $color;
+    
+    @include user-select(none);
+    @include cursor-grab;
+    @include transition(all, 1s, $normal-bezier, 0s);
+    @include border-radius(8px);
+    
+    &.left {
+      left: -150%;
+    }
+    
+    &.right {
+      left: 150%;
+    }
+    
+    &.focus {
+      left: 0;
+      opacity: 1;
+    }
+    
+    &.mousedown {
+      @include cursor-grabbing;
+    }
+    
     .card-content {
+      position: relative;
+      width: 100%;
+      top: 50%;
+      text-align: center;
+      
+      @include transform(translateY(-50%));
+      
+      .card-head {
+        display: inline-block;
+        width: 100%;
+        font-size: 3.5em;
+        text-align: center;
+        padding-bottom: 15px;
+        border-bottom: 4px solid white;
+        
+        @include respond-to(phone) { font-size: 2.2em; }
+      }
+      
+      .card-body {
+        display: inline-block;
+        width: 100%;
+        max-width: 960px;
+        font-size: 2em;
+        text-align: justify;
+        padding-top: 15px;
+        
+        @include respond-to(phone) { font-size: 1.25em; }
+      }
+      
       .btn-contact {
         display: inline-block;
         width: 100%;
@@ -208,7 +223,6 @@ $normal-bezier: cubic-bezier(.25,1,.5,1);
           
           .contact-text {
             display: inline-block;
-            // height: 64px;
             width: 100%;
             font-size: 2em;
             text-align: center;
