--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -1,189 +1,18 @@
 section#about {
   background: map-get($mex, blue);
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  
-  @include transition(all, 1s, $normal-bezier, 0s);
   
   div#about-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    
-    @include transition(height, 1s, $normal-bezier, 0s);
-    
     div#about-cards {
       position: absolute;
       width: calc(100% - 30px);
-      top: 15px;
       left: 15px;
+      top: 15px;
       
       // 100% - breadcrumb height - 30 - 15
       height: calc(100% - 109px);
       @include respond-to(phone) { height: calc(100% - 93px); }
       
-      div.about-card {
-        position: absolute;
-        left: 150%;
-        top: -150%;
-        width: 100%;
-        height: 100%;
-        background: darken(map-get($mex, blue), 15%);
-        
-        @include user-select(none);
-        @include cursor-grab;
-        @include transition(all, 1s, $normal-bezier, 0s);
-        @include border-radius(8px);
-        
-        &.focus {
-          left: 0;
-          top: 0;
-        }
-        
-        &.away {
-          left: -150%;
-        }
-        
-        &.mousedown {
-          @include cursor-grabbing;
-        }
-        
-        div.about-card-tondo {
-          position: absolute;
-          right: 50%;
-          background: white;
-          cursor: pointer;
-          z-index: 2;
-          
-          background-repeat: no-repeat;
-          background-position: center center;
-          background-color: #ccc;
-          background-size: cover;
-          
-          @include border-radius(50%);
-          @include transition(all, 1s, $normal-bezier, 0s);
-          @include transform(translate(-50%,-50%));
-          
-          &.focus {
-            @include border-radius(16px);
-            right: 15%;
-          }
-        }
-        
-        div.about-card-tease, div.about-card-info, div.about-card-summary {
-          @include display-flex;
-          @include align-items(center);
-          position: absolute;
-          left: 50%;
-          width: 100%;
-          padding: 4px;
-          color: white;
-          cursor: default;
-          
-          @include transform(translate(-50%, -50%));
-          @include transition(all, 1s, $normal-bezier, 0s);
-          
-          span {
-            display: block;
-            width: 100%;
-            text-align: center;
-            position: relative;
-          }
-        }
-        
-        div.about-card-tease {
-          font-size: 3.75em;
-          top: 25%;
-          padding-right: 10%;
-          
-          @include respond-to(phone) { font-size: 1.75em; }
-          
-          span {
-            text-align: right;
-          }
-        }
-        
-        div.about-card-info {
-          font-size: 3.25em;
-          top: 50%;
-          
-          @include respond-to(phone) { font-size: 1.25em; }
-        }
-        
-        div.about-card-summary {
-          font-size: 2.5em;
-          top: 75%;
-          
-          @include respond-to(phone) { font-size: 1em; }
-        }
-      }
-      
-      div#about-card-contact {
-        span {
-          position: absolute;
-          top: 33%;
-          left: 50%;
-          width: 100%;
-          text-align: center;
-          color: white;
-          font-size: 3.75em;
-          
-          @include transform(translate(-50%,-50%));
-          
-          @include respond-to(phone) { font-size: 2em; }
-        }
-        
-        a#about-contact {
-          position: absolute;
-          top: 67%;
-          left: 50%;
-          height: 64px;
-          width: 40%;
-          text-decoration: none;
-          text-align: center;
-          background: white;
-          
-          @include border-radius(8px);
-          @include transform(translate(-50%,-50%));
-          
-          @include respond-to(phone) {
-            width: calc(100% - 60px);
-            height: 48px;
-            font-size: 1.5em;
-          }
-          
-          span {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            font-size: 1em;
-            color: darken(map-get($mex, blue), 15%);
-            
-            @include transform(translate(-50%,-50%));
-            
-            // @include respond-to(phone) { font-size: 1.5em; }
-          }
-          
-          &.hover {
-            background: map-get($mex, blue);
-            
-            border: 4px solid white;
-            
-            span {
-              color: white;
-            }
-          }
-          
-          &.mousedown {
-            background: darken(map-get($mex, blue), 15%);
-            
-            @include transform(translate(-50%, calc(-50% + 4px)));
-          }
-        }
-      }
+      @include card(darken(map-get($mex, blue), 15%));
     }
     
     div#about-breadcrumbs {
@@ -251,41 +80,4 @@ section#about {
       }
     }
   }
-  
-  // a#about-contact {
-  //   @include display-flex;
-  //   @include align-items(center);
-  //   position: absolute;
-  //   height: 64px;
-  //   width: 40%;
-  //   bottom: 30px;
-  //   right: 30px;
-  //   text-decoration: none;
-  //   font-size: 2em;
-  //   color: darken(map-get($mex, blue), 15%);
-  //   background: white;
-      
-  //   @include respond-to(phone) {
-  //     width: calc(100% - 60px);
-  //     height: 48px;
-  //     font-size: 1.5em;
-  //   }
-    
-  //   @include border-radius(8px);
-      
-  //   span {
-  //     display: block;
-  //     width: 100%;
-  //     text-align: center;
-  //     position: relative;
-  //   }
-    
-  //   &.hover {
-  //     border: 4px solid map-get($mex, blue);
-  //   }
-    
-  //   &.mousedown {
-  //     @include transform(translateY(4px));
-  //   }
-  // }
 }
