--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -1,17 +1,18 @@
 section#history {
   background: map-get($mex, purple);
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  
-  @include transition(all, 1s, $normal-bezier, 0s);
   
   div#history-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    @include transition(height, 1s, $normal-bezier, 0s);
+    div#history-cards {
+      position: absolute;
+      height: calc(100% - 30px);
+      // 100% - mechanism width - (mechanism width - track width) / 2
+      width: calc(100% - 80px);
+      // mechanism width
+      left: 60px;
+      top: 15px;
+      
+      @include card(darken(map-get($mex, purple), 10%));
+    }
     
     div#history-mechanism {
       position: absolute;
@@ -41,7 +42,6 @@ section#history {
           background: white;
           height: 10px;
           width: 10px;
-          // border: 2px solid white;
           
           @include transform(translate(-50%, -50%));
           @include border-radius(50%);
@@ -60,147 +60,6 @@ section#history {
         @include user-select(none);
         @include transform(translate(-50%, -50%));
         @include border-radius(50%);
-      }
-    }
-    
-    div#history-cards {
-      position: absolute;
-      // 100% - mechanism width - (mechanism width - track width) / 2
-      width: calc(100% - 80px);
-      height: calc(100% - 60px);
-      // mechanism width
-      left: 60px;
-      top: 30px;
-      color: white;
-      
-      div.history-card {
-        @include display-flex;
-        @include align-items(center);
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 110%;
-        top: -110%;
-        padding: 10px;
-        background: darken(map-get($mex, purple), 10%);
-        
-        @include user-select(none);
-        @include cursor-grab;
-        @include transition(all, 1s, $normal-bezier, 0s);
-        @include border-radius(8px);
-        
-        &.focus {
-          left: 0;
-          top: 0;
-        }
-        
-        &.away {
-          top: 110%;
-        }
-        
-        &.mousedown {
-          @include cursor-grabbing;
-        }
-        
-        div {
-          display: block;
-          width: 100%;
-        
-          div.history-card-head {
-            display: block;
-            @include display-flex;
-            @include align-items(center);
-            position: relative;
-            height: 15%;
-            width: 100%;
-            font-size: 3.75em;
-            border-bottom: 4px solid white;
-            padding-bottom: 8px;
-            
-            @include respond-to(phone) { font-size: 2em; }
-            
-            span {
-              display: block;
-              width: 100%;
-              text-align: center;
-              position: relative;
-            }
-          }
-          
-          div.history-card-body {
-            display: block;
-            @include display-flex;
-            @include align-items(flex-start);
-            position: relative;
-            height: 85%;
-            width: 100%;
-            padding: 10px;
-            font-size: 2em;
-            
-            @include respond-to(phone) { font-size: 1em; }
-          }
-        }
-      }
-      
-      div#history-card-hero {
-        div {
-          div.history-card-body {
-            font-size: 2em;
-            
-            @include respond-to(phone) { font-size: 1.5em; }
-            
-            span {
-              display: block;
-              width: 100%;
-              text-align: center;
-              position: relative;
-            }
-          }
-        }
-      }
-      
-      div#history-card-contact {
-        div {
-          div.history-card-body {
-            justify-content: center;
-            
-            a#history-contact {
-              @include display-flex;
-              @include align-items(center);
-              position: relative;
-              height: 64px;
-              width: 40%;
-              text-decoration: none;
-              font-size: 1em;
-              text-align: center;
-              color: darken(map-get($mex, purple), 10%);
-              background: white;
-                
-              @include respond-to(phone) {
-                width: calc(100% - 60px);
-                height: 48px;
-                font-size: 1.5em;
-              }
-              
-              @include border-radius(8px);
-                
-              span {
-                display: block;
-                width: 100%;
-                text-align: center;
-                position: relative;
-              }
-              
-              &.hover {
-                border: 4px solid darken(map-get($mex, purple), 10%);
-              }
-              
-              &.mousedown {
-                @include transform(translateY(4px));
-              }
-            }
-          }
-        }
       }
     }
   }
