--- a/app/views/_/_card.html.erb
+++ b/app/views/_/_card.html.erb
@@ -1,10 +1,34 @@
+<% tondo = nil if local_assigns[:tondo].nil? %>
+<% head = nil if local_assigns[:head].nil? %>
+<% body = nil if local_assigns[:body].nil? %>
+<% contact = nil if local_assigns[:contact].nil? %>
+
 <div class="card">
   <div class="card-content">
-    <div class="card-head">
-      <%= head %>
-    </div>
-    <div class="card-body">
-      <%= body %>
-    </div>
+    <% if tondo %>
+      
+    <% end %>
+    
+    <% if head %>
+      <div class="card-head">
+        <%= head %>
+      </div>
+    <% end %>
+    
+    <% if body %>
+      <div class="card-body">
+        <%= body %>
+      </div>
+    <% end %>
+    
+    <% if contact %>
+      <a class="btn-contact" href="#contact">
+        <div class="contact-text-wrapper">
+          <span class="contact-text">
+            <%= contact %>
+          </span>
+        </div>
+      </a>
+    <% end %>
   </div>
 </div>
